Moved to a key/value model for responses, updated javascript, fixed error handling, added additional customer data
